--- a/figures/CalibrationData650nmNoGrid/Import_and_plot_data_for_Authorea.ipynb
+++ b/figures/CalibrationData650nmNoGrid/Import_and_plot_data_for_Authorea.ipynb
@@ -19,9 +19,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
+    "\n",
     "# import needed functions from numpy, matplotlib\n",
     "\n",
     "from numpy import loadtxt, savetxt, array\n",
@@ -34,9 +38,7 @@
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "mpl.rc('xtick', labelsize = default_size)\n",
-    "mpl.rc('ytick', labelsize = default_size)\n",
-    "\n",
-    "%matplotlib inline"
+    "mpl.rc('ytick', labelsize = default_size)"
    ]
   },
   {
@@ -56,7 +58,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "filename = '650 nm calibration with error.csv'\n",
@@ -146,7 +150,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#change default settings\n",
@@ -157,7 +163,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -195,7 +203,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -263,7 +273,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# restore default matplotlib settings\n",
@@ -283,7 +295,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# from numpy import loadtxt, savetxt, array # already done at beginning of notebook! \n",
@@ -312,7 +326,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -333,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.4.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
