--- a/91ej7tla018.md
+++ b/91ej7tla018.md
@@ -1,5 +1,10 @@
 ```
 from scipy.optimize import curve_fit  # nonlinear curve fitting 
 
+# initial guess for polarization models 
+I0 = 33.0    #peak value - offset voltage, in mV
+phi0 = 0.0   #offset angle, in radians
+offset0 = 0.2 #offset voltage, in mV
 
+initial_guess=array([I0, phi0, offset0])
 ```
