--- a/91ej7tla018.md
+++ b/91ej7tla018.md
@@ -7,6 +7,6 @@ phi0 = 0.0   #offset angle, in radians
 offset0 = 0.2 #offset voltage, in mV
 
 initial_guess=array([I0, phi0, offset0])
-
+theta = angle * pi / 180  # convert to radians
 
 ```
