--- a/91ej7tla018.md
+++ b/91ej7tla018.md
@@ -1,5 +1,5 @@
 ```
-from numpy import *                   
+from numpy import *                   #
 from scipy.optimize import curve_fit  # nonlinear curve fitting 
 
 # initial guess for polarization models 
