--- a/91ej7tla018.md
+++ b/91ej7tla018.md
@@ -1,6 +1,6 @@
 ```
 from numpy import *                   # skip if already done earlier in notebook
-from scipy.optimize import curve_fit  # import nonlinear curve fitting ro
+from scipy.optimize import curve_fit  # import nonlinear curve fitting routine
 
 # initial guess for polarization models 
 I0 = 33.0    #peak value - offset voltage, in mV
