--- a/n92ij3o0h3.md
+++ b/n92ij3o0h3.md
@@ -1,5 +1,5 @@
 ```
-theta = angle * pi / 180  # convert to radians  #
+theta = angle * pi / 180  # convert to radians  #skip if already calculated
 
 V_pd_model = polarization_model_1(theta, I_0, phi_0, offset)
 residual = V_pd - V_pd_model
