--- a/n92ij3o0h3.md
+++ b/n92ij3o0h3.md
@@ -1,6 +1,6 @@
 ```
 theta = angle * pi / 180  # convert to radians  #skip if already calculated
 
-V_pd_model = polarization_model_1(theta, fit[0], fit[1], fit[2)
+V_pd_model = polarization_model_1(theta, fit[0], fit[1], fit[2])
 residual = V_pd - V_pd_model
 ```
