--- a/eff5p2h1spo.tex
+++ b/eff5p2h1spo.tex
@@ -1,4 +1,4 @@
 \begin{equation}
 \label{eq:Malus}
 I(\theta) = I_0 \cos^2(\theta - {\theta}_0)+ \textrm{offset} = \frac{1}{2}I_0\left[1 + \cos(2 (\theta - \theta_0))\right]+ \textrm{offset}
-\end
+\end{equation
