added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -7,3 +7,13 @@
   publisher = {Oxford University Press},
   year = {2010},
 }
+
+
+@book{herman2011,
+  url = {http://www.cambridge.org/us/academic/subjects/engineering/engineering-general-interest/students-guide-data-and-error-analysis?localeText=United+States&locale=en_US&query=&remember_me=on#78gmkqofLZ87oK5j.97},
+  title = {{Students guide data and error analysis | Engineering: general interest}},
+  note = {Accessed on Fri, June 08, 2018},
+  author = {Berendsen, Herman},
+  publisher = {Cambridge University Press},
+  year = {2011},
+}
