--- a/3p65o4t0rhk.tex
+++ b/3p65o4t0rhk.tex
@@ -1,4 +1,4 @@
 \begin{equation}
-\label{eq:Malus}
+\label{eq:Photo}
 I(\theta) = I_0 \cos^2(\theta - {\theta}_0)+ C = \frac{1}{2}I_0\left[1 + \cos(2 (\theta - \theta_0))\right]+ C
 \end{equation}
