--- a/tuf1r2vtbts.tex
+++ b/tuf1r2vtbts.tex
@@ -1,4 +1,4 @@
 \begin{equation}
 \label{eq:deltaV}
-\delta V = \left(\frac{\partial{V}{\partial{V_0}}\right)
+\delta V = \left(\frac{\partial{V(}{\partial{V_0}}\right)
 \end{equation}
