--- a/tuf1r2vtbts.tex
+++ b/tuf1r2vtbts.tex
@@ -1,4 +1,4 @@
 \begin{equation}
 \label{eq:deltaV}
-\left(\delta V\right)^2 = \left( \frac{\partial{V}}{\partial{V_0}}\right)^
+\left(\delta V\right)^2 = \left( \frac{\partial{V}}{\partial{V_0}}\right)^2 
 \end{equation}
