--- a/c2r64j4khus.tex
+++ b/c2r64j4khus.tex
@@ -1,4 +1,4 @@
 \begin{equation}
-\label{eq:delta_V_Ma}
+\label{eq:delta_V_Malus}
 \left(\delta V\right) = \sqrt{\left( \frac{\partial{V}}{\partial{V_0}}\right)^2 (\delta V_0)^2 + \left( \frac{\partial{V}}{\partial{\phi}}\right)^2 (\delta \phi)^2 + \left( \frac{\partial{V}}{\partial{V_1}}\right)^2 (\delta V_1)^2}
 \end{equation}
