--- a/c2r64j4khus.tex
+++ b/c2r64j4khus.tex
@@ -1,4 +1,4 @@
 \begin{equation}
 \label{eq:delta_V_Malus}
-\delta V\right) = \sqrt{ (\delta V_0)^2 + \left(-2\cos{\phi}\sin{\phi)^2 (\delta \phi)^2 +  (\delta V_1)^2}
+\delta V = \sqrt{ (\delta V_0)^2 + \left(-2\cos{\phi}\sin{\phi)^2 (\delta \phi)^2 +  (\delta V_1)^2}
 \end{equation}
