--- a/c2r64j4khus.tex
+++ b/c2r64j4khus.tex
@@ -1,4 +1,4 @@
 \begin{equation}
 \label{eq:delta_V_Malus}
-\delta V = \sqrt{ \left(\cos{\phi}\right(\delta V_0)^2 + (\delta V_1)^2}
+\delta V = \sqrt{ \left(\cos{\phi}\right)(\delta V_0)^2 + (\delta V_1)^2}
 \end{equation}
