--- a/c2r64j4khus.tex
+++ b/c2r64j4khus.tex
@@ -1,4 +1,4 @@
 \begin{equation}
 \label{eq:delta_V_Malus}
-\frac\delta V = \sqrt{ \left(\cos{\phi}\right)^4(\delta V_0)^2 + \left(-2 V_0 \cos{\phi}\sin{\phi} \right)^2(\delta \phi)^2+ (\delta V_1)^2}
+\frac{\delta V}{ = \sqrt{ \left(\cos{\phi}\right)^4(\delta V_0)^2 + \left(-2 V_0 \cos{\phi}\sin{\phi} \right)^2(\delta \phi)^2+ (\delta V_1)^2}
 \end{equation}
