--- a/c2r64j4khus.tex
+++ b/c2r64j4khus.tex
@@ -1,4 +1,4 @@
 \begin{equation}
 \label{eq:delta_V_Malus}
-\frac{\delta V}{V_0} = \sqrt{ (\cos{\phi}\right)^4(\frac{\delta V_0}{V)^2 + \left(-2 V_0 \cos{\phi}\sin{\phi} \right)^2(\delta \phi)^2+ (\delta V_1)^2}
+\frac{\delta V}{V_0} = \sqrt{ (\cos{\phi}\right)^4(\frac{\delta V_0}{V_)^2 + \left(-2 V_0 \cos{\phi}\sin{\phi} \right)^2(\delta \phi)^2+ (\delta V_1)^2}
 \end{equation}
