--- a/c2r64j4khus.tex
+++ b/c2r64j4khus.tex
@@ -1,4 +1,4 @@
 \begin{equation}
 \label{eq:delta_V_Malus}
-\frac{\delta V}{V_0} = \sqrt{ {\left(\cos{\phi}\right)}^4\left(\frac{\delta V_0}{V_0}\right)^2 + \left(-2 \cos{\phi}\sin{\phi} \right)^2(\delta \phi)^2+ \left(\frac{\delta V_0}{V_0}\right)^2}
+\frac{\delta V}{V_0} = \sqrt{ {\left(\cos{\phi}\right)}^4\left(\frac{\delta V_0}{V_0}\right)^2 + \left(-2 \cos{\phi}\sin{\phi} \right)^2(\delta \phi)^2+ \left(\frac{\delta V_}{V_0}\right)^2}
 \end{equation}
