--- a/33258mite2s.md
+++ b/33258mite2s.md
@@ -1,3 +1,10 @@
 ```
-<Insert Code Here>
+I0 = 33.0    #peak value - offset voltage, in mV
+phi0 = 0.0   #offset angle, in radians
+offset0 = 0.2 #offset voltage, in mV
+
+initial_guess=array([I0, phi0, offset0])
+
+theta = angle * pi / 180  # convert to radians
+
 ```
